# instant-riscv

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: ffi.rs  main.rs
web/: index.js  package-lock.json  package.json  serve.js  worker.js
web/www/: css.css  index.html
web/www/xterm-pty/: README.md  index.js  index.js.map  wasiWorkerTools.js  wasiWorkerTools.js.map
