[package]
name = "instant-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { git = "https://github.com/xxuejie/ckb-vm", rev = "c8aff96" }
ckb-vm-definitions = { git = "https://github.com/xxuejie/ckb-vm", rev = "c8aff96" }
ckb-vm-contrib = { git = "https://github.com/xxuejie/ckb-vm-contrib", rev = "7d61612" }

[build-dependencies]
cc = "1.0.73"

[profile.release]
opt-level = "s"
